# polyomino-puzzle-solver

./: .gitignore  .ruffignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.opencode/: oh-my-opencode.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-polyomino-puzzle-solver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-polyomino-puzzle-solver/checklists/: requirements.md
specs/001-polyomino-puzzle-solver/contracts/: gui-events.json  json-schema.json  module-api.md
src/logic/: rotation.py  validator.py
src/models/: board.py  piece.py  puzzle_config.py  puzzle_state.py
src/polyomino_jigsaw_solver/gui/: main_window.py  piece_editor.py  piece_list.py  piece_tab.py
src/polyomino_jigsaw_solver/models/: __init__.py  board_renderer.py  puzzle_board.py  pygame_board_renderer.py
src/polyomino_jigsaw_solver/solver/: __init__.py  solver.py
src/woodster_jigsaw_solver/: __main__.py
src/woodster_jigsaw_solver/gui/: __init__.py  board_tab.py  grid_widget.py  main_window.py  piece_editor.py  piece_list.py  piece_shape_widget.py  piece_tab.py
tests/: test_puzzle_board.py
tests/fixtures/: sample_puzzles.json
