[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "woodster-jigsaw-solver"
version = "0.1.0"
description = "A solver for the Aztec Labrynth puzzle by Woodster. It processes an image of the pieces then finds a solution using a backtracking algorithm."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "customtkinter>=5.2.0",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
